# webr

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md  bench.sh
.github/workflows/: pages.yml
crates/webr-cache/: Cargo.toml
crates/webr-cache/src/: cache.rs  config.rs  error.rs  lib.rs  memory.rs  redis_store.rs  sled_store.rs  traits.rs
crates/webr-core/: Cargo.toml
crates/webr-core/src/: app.rs  component.rs  config.rs  context.rs  error.rs  extract.rs  inject.rs  lib.rs  middleware.rs  response.rs
crates/webr-db/: Cargo.toml
crates/webr-db/src/: config.rs  error.rs  executor.rs  lib.rs  page.rs  pool.rs  row.rs  transaction.rs
crates/webr-db/tests/: db_tests.rs  pool_tests.rs
crates/webr-macros/: Cargo.toml
crates/webr-macros/src/: component.rs  component_gen.rs  config.rs  controller.rs  entity.rs  error_derive.rs  lib.rs  main_macro.rs  route.rs  sql_macro.rs  sql_parser.rs  tx.rs  validate.rs
crates/webr-middleware/: Cargo.toml
crates/webr-middleware/src/: auth.rs  cached_body.rs  lib.rs
crates/webr-web/: Cargo.toml
crates/webr-web/src/: app.rs  component.rs  error.rs  extract.rs  lib.rs  middleware.rs  router.rs
docs/: README.md  README_zh-CN.md  SUMMARY.md  _config.yml  book.toml  cache.md  configuration.md  controllers-routing.md  database.md  dependency-injection.md  file-upload-sse.md  file-upload.md  index.md  middleware.md  package.json  performance.md  quick-start.md  request-handling.md  response-error.md  sse.md
docs/.vitepress/: config.js
examples/axum-bench/: Cargo.toml
examples/axum-bench/src/: main.rs
examples/cache/: Cargo.toml
examples/cache/config/: application.toml
examples/cache/src/: main.rs
examples/file-upload/: Cargo.toml
examples/file-upload/config/: application.toml
examples/file-upload/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/config/: application-dev.toml  application.toml
examples/hello-world/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/config/: application.toml
examples/middleware/src/: main.rs
examples/orm/: Cargo.toml
examples/orm/config/: application.toml
examples/orm/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/validation/: Cargo.toml
examples/validation/src/: main.rs
src/: auto_init.rs  cache_adapter.rs  db_adapter.rs  lib.rs
