[workspace]
resolver = "2"
members = [
    ".",
    "crates/webr-core",
    "crates/webr-db",
    "crates/webr-macros",
    "examples/hello-world",
    "examples/orm",
    "examples/file-upload",
    "examples/middleware",
    "examples/validation",
    "examples/sse",
]

[package]
name = "webr"
version = "0.1.0"
edition = "2021"
description = "A Spring Boot-inspired web framework for Rust"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[dependencies]
webr-core = { version = "0.1.0", path = "crates/webr-core" }
webr-db = { version = "0.1.0", path = "crates/webr-db", optional = true }
webr-macros = { version = "0.1.0", path = "crates/webr-macros" }
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
inventory = "0.3"
toml = "0.8"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"

[features]
mysql = ["dep:webr-db", "webr-db/mysql"]
postgres = ["dep:webr-db", "webr-db/postgres"]
sqlite = ["dep:webr-db", "webr-db/sqlite"]
