[package]
name = "webr-cache"
version = "0.1.0"
edition = "2021"
description = "Cache module for the Webr framework, providing in-memory, embedded, and Redis cache backends with unified KV and extended data-structure APIs"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
moka = { version = "0.12", features = ["future"], optional = true }
sled = { version = "0.34", optional = true }
redis = { version = "1.3", features = ["tokio-comp", "connection-manager", "cluster-async"], optional = true }

[features]
memory = ["dep:moka"]
sled-backend = ["dep:sled"]
redis-backend = ["dep:redis"]
