[package]
name = "webr-core"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
description = "Core module for the Webr framework, providing dependency injection, component management, and configuration"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
dotenvy = "0.15"
toml = "0.8"
