[package]
name = "webr-db"
version = "0.1.0"
edition = "2021"

[dependencies]
webr-core = { path = "../webr-core" }
sqlx = { version = "0.8", features = [
    "runtime-tokio", "mysql", "postgres", "sqlite", "chrono", "uuid",
] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = [
    "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite",
] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
