[package]
name = "webr-macros"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Procedural macros for the Webr framework, including controller, component, entity, sql, config, validate, and tx macros"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
