[package]
name = "webr-middleware"
version = "0.1.0"
edition = "2021"
description = "Middleware implementations for the Webr framework"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[dependencies]
webr-core = { version = "0.1.0", path = "../webr-core" }
axum = "0.8"
async-trait = "0.1"
bytes = "1"
serde_json = "1"
