[package]
name = "webr-web"
version = "0.1.0"
edition = "2021"
description = "Web layer for the Webr framework, providing application lifecycle, routing, extractors, middleware, and response types on top of axum"
repository = "https://github.com/xgpxg/webr"
authors = ["wxg"]

[dependencies]
webr-core = { version = "0.1.0", path = "../webr-core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
inventory = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"

[features]
default = []
