[package]
name = "orm-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
webr = { path = "../..", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

